# CLM-Harvest

./: README.md  environment.yml  pyproject.toml
paras/: README.md  environment.yml  pyproject.toml
paras/scripts/: make_substitution_matrix.py  predict_specificities.py
paras/src/paras/: antismash.py  cli.py  hmmer.py  logging.py  parsing.py
retromol/: matching_rules.yml
scripts/harvest/: evaluate_conditional_model_single_compound.py  fingerprint_parsed_compounds.py  sample_generated_smiles.py
src/harvest/: chem.py  cli.py  loader.py  retromol.py  sample.py  train.py  version.py
workflow/config/: config_lipopeptides.yml  example_config_fast.yaml  template_config.yaml  template_config_finetune.yaml
