[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "clm-harvest"
version = "1.0.0-dev"
authors = [
  {name="Michael Skinnider", email="skinnider@princeton.edu"},
  {name="David Meijer", email="dm5950@princeton.edu"}
]
description = "De novo generation of specialized metabolites for biosynthetic gene clusters"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "deepsmiles",
    "fcd_torch",
    "numpy",
    "pandas",
    "pulp<2.8.0",
    "rdkit",
    "scikit-learn",
    "scipy==1.11.1",
    "selfies",
    # snakemake->stopit needs pkg_resources, but is failing
    # to specify setuptools as a dependency
    "setuptools",
    "snakemake",
    "torch",
    "tqdm",
    "seaborn",
    "matplotlib"
]

[project.scripts]
clm = "clm.__main__:main"
harvest = "harvest.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["clm", "clm.*", "harvest", "harvest.*"]

[tool.setuptools_scm]
write_to = "src/clm/_version.py"

[tool.setuptools.package-data]
clm = ["data/*.smi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-sv"

[project.optional-dependencies]
dev = [
    "build",
    "coverage",
    "coveralls",
    "myst-parser",
    "pre-commit",
    "pytest",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinx_rtd_theme",
    "twine"
]

